# CNC

./: LICENSE  README.md
.github/workflows/: codeql.yml
cnc-pendant/: CMakeLists.txt  README.md  prj.conf
cnc-pendant/boards/: esp32.overlay
cnc-pendant/dts/bindings/: rotary-encoder.yaml
cnc-pendant/src/: gcode_generator.cpp  gcode_generator.h  main.cpp  pendant_controller.cpp  pendant_controller.h  pendant_encoder.cpp  pendant_encoder.h  pendant_switches.cpp  pendant_switches.h  uart_interface.cpp  uart_interface.h
esp32-pendant/: CMakeLists.txt  prj.conf
esp32-pendant/boards/: esp32.overlay
esp32-pendant/src/: main.cpp
root-controller/: README.md  config.yaml
